--- a/app/views/actor_templates/details.html.erb
+++ b/app/views/actor_templates/details.html.erb
@@ -23,7 +23,7 @@
 <hr>
 
 <h2>Filmography</h2>
-<% matching_movies = Movie.where({ :actor_id => @the_actor.id})%>
+<% matching_characters = Character.where({ :actor_id => @the_actor.id})%>
 <table border = "1">
   <tr>
     <th>Title</th>
@@ -33,16 +33,23 @@
     <th></th>
   </tr>
 
-  <% matching_movies.each do |a_movie| %>
+  <% matching_characters.each do |a_character| %>
     <tr>
-      <td><%= a_movie.title %></td>
       <td>
-        <img src = "<%= a_movie.year %>" width ="100">
+        <% matching_movies = Movie.where({ :id => a_character.movie_id})%>
+        <% the_movie = matching_movies.at(0) %>
+        <%= the_movie.title %>
       </td>
-      <td><%= a_movie.title %></td>
-      <td><%= a_movie.year %></td>
+      <td><%= the_movie.year %></td>
       <td>
-        <a href = "/movies/<%= a_movie.id %>">Show Details</a>
+        <% matching_director = Director.where({ :id => the_movie.director_id})%>
+        <% the_director = matching_director.at(0) %>
+        <%= the_director.name %>
+      </td>
+
+       <td><%= a_character.name %></td>
+      <td>
+        <a href = "/movies/<%=the_movie.id %>">Show Details</a>
       </td>
     </tr>
   
